Structure run.sh for easy commenting/editing of jvm options.